# cluster-representation-research

./: .gitignore  AGENTS.md  MANIFEST.md  README.md  README_RELEASE.md  environment.yml  pyproject.toml
data/abx4/: README.md  properties.csv
data/pems/: pems.csv
experiments/: LABEL_MAPPING.json  ablation_full_eval_summary.json  abx_grid_predictions_exp6v1_allpems_400k.json  cross_infer_rep.json  davis2024_pems_zeroshot_predictions.json  davis2024_pems_zeroshot_summary.json  infer_davis2024_pems_zeroshot.py  infer_pems.py  ood_experimental_values.json  pems_inference_summary.json  pems_ood_5fold_exp7d.json  pems_ood_model_deviation_exp7a.json  plot_lcurves.py  predict_abx_grid.py  predict_eap4_paph6.py  predict_ood_eap7.py  predict_ood_eap8.py  predict_sy_series.py  run_mechanism_analysis.py
experiments/00_data_prep/: pems_5fold_splits_seed13.json  pems_5fold_splits_seed7.json  pems_5fold_splits_v2.json  prep_crystal_npy.py  prep_exp_val.py  prep_molecule_npy.py  prep_pems_npy.py  run_all.py  run_cleaning.py
experiments/_stats_bootstrap/: bootstrap_results.json
experiments_davis2024/: abx_grid_predictions_exp6v1_allpems_400k.json  branch_meta.json  cross_infer_rep.py  infer_and_plot.py  infer_pems.py  paper_plot_style.py  pems_ood_5fold_exp7a.json  pems_ood_5fold_exp7c.json  pems_ood_heldout_exp7_all.json  pems_predictions.json  pems_sensitivity_summary.json  pems_uq_calibration.json  plot_lcurves.py  predict_abx_grid.py  predict_eap4_paph6.py  predict_sy_series.py  run_mechanism_analysis.py  validate_ob.py
scripts/: check_release_assets.py
(+545 files in other folders)
