[project]
name = "stoichiometric-cluster-learning"
version = "0.1.0"
description = "Code release for stoichiometric cluster learning of multi-ionic energetic salts."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [
  { name = "Ming-Yu Guo" },
  { name = "Wei-Jia Zou" },
  { name = "Yu Shang" },
  { name = "Wei-Xiong Zhang" },
]

dependencies = []

[project.optional-dependencies]
figures = [
  "ase>=3.23",
  "choreographer>=0.99",
  "gemmi>=0.6",
  "kaleido>=0.2",
  "matplotlib>=3.7",
  "numpy>=1.24,<2.0",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "pikepdf>=9.0",
  "pillow>=10.0",
  "plotly>=5.20",
  "pymatgen>=2024.1",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "umap-learn>=0.5",
]
inference = [
  "ase>=3.23",
  "dpdata>=0.2",
  "gemmi>=0.6",
  "numpy>=1.24,<2.0",
  "pandas>=2.0",
  "pymatgen>=2024.1",
]
viewer = [
  "dash>=2.14",
  "flask-sock>=0.7",
  "gemmi>=0.6",
  "kaleido>=0.2",
  "plotly>=5.20",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crystal_viewer = ["assets/*.css", "assets/*.js"]

[tool.uv]
conflicts = []

[tool.ruff]
line-length = 100
